feat: in-app notification (#6)
* feat: in-app notification

* docs: generate docs
